# SOFAR

./: README.md
devel/: .catkin  .rosinstall  _setup_util.py
devel/include/beginner_tutorials/: AddTwoIntsRequest.h  AddTwoIntsResponse.h  Num.h
devel/lib/beginner_tutorials/: add_two_ints_client  add_two_ints_server  listener  talker
devel/lib/pkgconfig/: beginner_tutorials.pc  sofar_isa.pc  turtlebot.pc
devel/lib/sofar_isa/: sofar_isa_node
devel/share/beginner_tutorials/cmake/: beginner_tutorials-msg-extras.cmake  beginner_tutorials-msg-paths.cmake  beginner_tutorialsConfig.cmake
src/beginner_tutorials/: CMakeLists.txt  package.xml
src/beginner_tutorials/launch/: pubsub.launch  sofar.launch  tags.launch
src/beginner_tutorials/scripts/: goCircles.py  goToSpecificPoint.py  goalRoom.py  pathPlanning.py
src/build-sofar_isa-Desktop-Debug/: Makefile  moc_menuwindow.cpp  moc_welcome.cpp  sofar_isa  ui_menuwindow.h  ui_welcome.h
src/sofar_isa/: CMakeLists.txt
src/sofar_isa/src/: Makefile  main.cpp  menuwindow.cpp  menuwindow.h  menuwindow.ui  sofar_isa.pro  welcome.cpp  welcome.h  welcome.ui
src/turtlebot/: CMakeLists.txt
src/turtlebot/launch/: sofar.launch
src/turtlebot/scripts/: goCircles.py  goToSpecificPoint.py  motion.py  pathPlanning.py
turtlebot_custom_gazebo_worlds/: myworld.world  tutorial.world  tutorial2.world
turtlebot_custom_maps/: myworl2.pgm  myworl2.yaml  myworld.pgm  myworld.yaml  tutorial.pgm  tutorial.yaml  tutorial2.pgm  tutorial2.yaml
turtlebot_custom_maps/Nuova cartella/: myworld.pgm  myworld.yaml
(+5 files in other folders)
